salesU/k8s/pingfederate/engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate
  labels:
    app: pingfederate
    tier: engine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingfederate
      tier: engine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pingfederate
        tier: engine
        version: "0.1"
    spec:
      containers:
      # telegraf for monitoring PF engine jmx.       
      - name: telegraf
        image: docker.io/library/telegraf:1.9.5-alpine
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /etc/telegraf
          name: telegraf-conf
      - envFrom:
        - configMapRef:
            name: engine-variables
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: jolokia-variables
        name: engine-node
        image: pingidentity/pingfederate:10.0.0-alpine-edge
        ports:
        - name: runtime
          containerPort: 9031
        readinessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 1
          initialDelaySeconds: 100
          failureThreshold: 1
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 20"]
        resources:
          requests:
            memory: 1.5Gi
            cpu: "1"
          limits:
            memory: 1.5Gi
            cpu: "1"
      volumes:
      - configMap:
          name: telegraf-conf
        name: telegraf-conf
